# pyo3-example-package

./: .gitignore  Cargo.toml  README.md  pyproject.toml
example/: __init__.py  example.pyi
example/fib/: __init__.py  fib.pyi
example/numeric/: __init__.py  numeric.pyi
src/: examples.rs  lib.rs
tests/: test_check_position.py  test_fibonacci.py  test_number.py
