[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["maturin>=1.7.4", "pip>=24.2"]

[project.optional-dependencies]
dev = [
    "pytest<=8.3.3"
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
